# server/swagger-output.json
@@ -108,7 +108,7 @@
         }
       }
     },
-    "/SuperAdmin/ChangeStatus/{id}": {
+    "/SuperAdmin/superadminstatus/{superadmin_id}": {
       "patch": {
         "tags": [
           "SuperAdmin"
@@ -116,7 +116,247 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "superadmin_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/Vendor/signup": {
+      "post": {
+        "tags": [
+          "Vendor"
+        ],
+        "description": "",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "parameters": [
+          {
+            "name": "profile_pic",
+            "in": "formData",
+            "type": "file",
+            "required": false,
+            "accept": "image/jpeg, image/png"
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "email",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "password",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "status",
+            "in": "formData",
+            "type": "string",
+            "required": true,
+            "enum": [
+              "true",
+              "false"
+            ],
+            "default": "true"
+          },
+          {
+            "name": "role",
+            "in": "formData",
+            "type": "string",
+            "required": true,
+            "enum": [
+              "Vendor"
+            ],
+            "default": "Vendor"
+          },
+          {
+            "name": "superadminId",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/Vendor/login": {
+      "post": {
+        "tags": [
+          "Vendor"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/Vendor/getvendors": {
+      "get": {
+        "tags": [
+          "Vendor"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/Vendor/updatevendor": {
+      "put": {
+        "tags": [
+          "Vendor"
+        ],
+        "description": "",
+        "consumes": [
+          "multipart/form-data"
+        ],
+        "parameters": [
+          {
+            "name": "profile_pic",
+            "in": "formData",
+            "type": "file",
+            "required": false,
+            "accept": "image/jpeg, image/png"
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "type": "string",
+            "required": false
+          },
+          {
+            "name": "email",
+            "in": "formData",
+            "type": "string",
+            "required": false
+          },
+          {
+            "name": "password",
+            "in": "formData",
+            "type": "string",
+            "required": false
+          },
+          {
+            "name": "status",
+            "in": "formData",
+            "type": "string",
+            "required": false,
+            "enum": [
+              "true",
+              "false"
+            ],
+            "default": "true"
+          },
+          {
+            "name": "role",
+            "in": "formData",
+            "type": "string",
+            "required": false,
+            "enum": [
+              "Vendor"
+            ],
+            "default": "Vendor"
+          },
+          {
+            "name": "superadminId",
+            "in": "formData",
+            "type": "string",
+            "required": false
+          },
+          {
+            "name": "vendor_Id",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/Vendor/vendorstatus/{vendor_Id}": {
+      "patch": {
+        "tags": [
+          "Vendor"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "vendor_Id",
             "in": "path",
             "required": true,
             "type": "string"
